--- a/src/Styles/tour-detailes.css
+++ b/src/Styles/tour-detailes.css
@@ -98,3 +98,32 @@
     border-radius: 50px;
     object-fit: cover;
  }
+
+ .user__reviews{
+    margin-top: 2.5rem;
+ }
+
+ .review__item h5{
+    font-size: 1rem;
+    margin-bottom: 0;
+ }
+
+ .review__item p{
+    font-size: .9rem;
+    color: var(--text-color);
+
+ }
+
+ .review__item h6{
+    font-size: 1.1rem;
+    columns: var(--text-color);
+ }
+
+ .review__item span i {
+    font-size: 1.2rem;
+    color: var(--secondary-color);
+ }
+
+ .review__item span {
+    font-weight: 500;
+ }
