--- a/src/Shared/tour-card.css
+++ b/src/Shared/tour-card.css
@@ -95,3 +95,21 @@
 .booking__btn a:hover{
     color: #fff;
 }
+
+
+@media only screen and (max-width: 992px) {
+   
+
+    .tour__title{
+        font-size: 1rem;
+    }
+
+    .booking__btn a{
+        font-size: 0.2rem 0.5rem !important;
+    }
+    
+    .tour__location, .tour__rating{
+        font-size: 0.8rem;
+    }
+
+    }
